test/e2e/testdata/wasm-registered-http.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: wasm-module-http-proxy
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  wasmModules:
    - name: example-http-filter
      source:
        type: HTTP
        http:
          url: http://static-file-server.gateway-conformance-infra/wasm/envoy_filter_http_wasm_example.wasm
          sha256: 79c9f85128bb0177b6511afa85d587224efded376ac0ef76df56595f1e6315c0
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wasm-module-http-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: wasm-module-http-proxy
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-wasm-module-http
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: wasm-module-http-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /wasm-module-http
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: wasm-module-http-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-with-wasm-module-http
  wasm:
    - name: example-http-filter
      rootID: my_root_id
